tests/baselines/reference/parserErrorRecovery_ExtendsOrImplementsClause3.errors.txt
parserErrorRecovery_ExtendsOrImplementsClause3.ts(1,16): error TS1097: 'extends' list cannot be empty.
parserErrorRecovery_ExtendsOrImplementsClause3.ts(1,28): error TS2304: Cannot find name 'A'.


==== parserErrorRecovery_ExtendsOrImplementsClause3.ts (2 errors) ====
    class C extends implements A {
                   
!!! error TS1097: 'extends' list cannot be empty.
                               ~
!!! error TS2304: Cannot find name 'A'.
    }